git commit -m "Ajuste no tamanho do cronometro!"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <section id="pomodoro" class="d-flex flex-column align-items-center container">
-            <div class="d-flex flex-column align-items-center justify-content-center mt-4 p-3 col-10 fundo">
+            <div class="d-flex flex-column align-items-center justify-content-center mt-4 p-3 col-10 fundo col-md-8 col-lg-6">
                 <div class="d-flex justify-content-between align-items-stretch">
                     <div class="fundo-btn ativado mr-2">
                         Pomodoro
