git commit -m "To Do List"

--- a/index.html
+++ b/index.html
@@ -68,6 +68,40 @@
                 <h3 id="cicle-title" class="mb-0 mt-0">Foco!</h3>
             </div>
         </section>
+
+        <section id="to-do" class="mt-4 container d-none">
+            <div class="d-flex flex-column align-center col-10 offset-1">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2 class="mb-0 mt-0">To Do</h2>
+                    <div>
+                        <span class="material-symbols-outlined circle">add</span>
+                    </div>
+                </div>
+
+                <hr>
+                
+                <div class="d-flex flex-column">
+                    <div class="d-flex aligen-items-center justify-content-between">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <input type="checkbox" name="task1" id="task1">
+                            <label for="task1">
+                                <h4 class="mb-0 mt-0 h6">0/2 ciclos</h4>
+                                <h3 class="mb-0 mt-0 h5">Estudar matemática</h3>
+                            </label>
+                        </div>
+
+                        <div class="d-flex">
+                            <div class="d-flex align-items-center justify-content-center">
+                                <span class="material-symbols-outlined circle mr-1">edit</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <span class="material-symbols-outlined circle">delete</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="d-flex justify-content-center align-items-center">
