--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                     </div>
     
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary">Fechar</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <main class="d-flex flex-column align-items-center justify-content-center flex-lg-row">
-        <section id="pomodoro" class="d-flex flex-column flex-lg-column-reverse align-items-center justify-content-center container col-lg-5 offset-lg-1">
-            <div class="d-flex flex-column align-items-center justify-content-center mt-4 p-3 col-10 fundo col-md-8 col-lg-12">
+    <main class="d-flex flex-column align-items-center justify-content-start flex-lg-row container">
+        <section id="pomodoro" class="d-flex flex-column flex-lg-column-reverse align-items-center justify-content-center col-12 col-lg-6">
+            <div class="d-flex flex-column align-items-center justify-content-center mt-4 p-3 fundo col-10 col-lg-12">
                 <div class="d-flex justify-content-between align-items-stretch">
                     <div class="fundo-btn ativado mr-2">
                         Pomodoro
@@ -138,8 +138,8 @@
             </div>
         </section>
 
-        <section id="to-do" class="mt-4 container col-12 col-lg-5 offset-lg-0">
-            <div class="d-flex flex-column align-center col-12 offset-0 col-md-10 offset-md-1">
+        <section id="to-do" class="mt-4 col-12 offset-0 col-md-10 offset-md-1 col-lg-5">
+            <div class="d-flex flex-column align-center justify-content-end">
                 <div class="d-flex justify-content-between align-items-center">
                     <h2 class="mb-0 mt-0 text-white">To Do</h2>
                     <div data-toggle="modal" data-target="#modal-addTask">
