--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="borda">
+        <div class="borda fixed-top">
             <nav class="container navbar navbar-expand-lg">
                 <div class="w-100 m-auto d-flex align-items-center justify-content-between">
                     <a class="navbar-brand" href="#"> 
