--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
         </section>
 
-        <section id="to-do" class="mt-4 col-12 offset-0 col-md-10 offset-md-1 col-lg-5">
+        <section id="to-do" class="mt-4 col-12 offset-0 col-md-10 offset-lg-1 col-lg-5">
             <div class="d-flex flex-column align-center justify-content-end">
                 <div class="d-flex justify-content-between align-items-center">
                     <h2 class="mb-0 mt-0 text-white">To Do</h2>
